<?xml version="1.0" encoding="utf-8"?>
<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
<!--    <item android:id="@+id/add_bookmark" android:title="Add Bookmark"/>-->
<!--    <item android:id="@+id/all_bookmarks" android:title="All Bookmarks"/>-->
<!--    <item android:id="@+id/rate_us" android:title="Rate Us"/>-->
<!--</menu>-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_bookmark"
        android:title="@string/add_bookmark"
        android:icon="@drawable/ic_bookmark_add" />

    <item
        android:id="@+id/all_bookmarks"
        android:title="@string/all_bookmarks"
        android:icon="@drawable/ic_bookmarks" />

    <item
        android:id="@+id/rate_us"
        android:title="@string/rate_us"
        android:icon="@drawable/ic_star_rate" />

</menu>
